force-app/main/default/objects/Opportunity/fields/Annualized_Sales__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Sales__c</fullName>
    <formula>Average_Weekly_Sales__c  * 52</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>