force-app/main/default/objects/Opportunity/fields/Atlas_Synch_Status__c.field-meta.xml
<CustomField>
    <fullName>Atlas_Synch_Status__c</fullName>
    <label>Atlas Synch Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>