force-app/main/default/objects/Opportunity/fields/Average_Weekly_Sales__c.field-meta.xml
<CustomField>
    <fullName>Average_Weekly_Sales__c</fullName>
    <label>Average Weekly Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>