force-app/main/default/objects/Opportunity/fields/Engine_Type__c.field-meta.xml
<CustomField>
    <fullName>Engine_Type__c</fullName>
    <label>Engine Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICON Mini Kiosk</fullName>
            </value>
            <value>
                <fullName>Target Kiosk</fullName>
            </value>
            <value>
                <fullName>Drive Thru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>