force-app/main/default/objects/Opportunity/fields/Estimated_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Open_Date__c</fullName>
    <description>When a new store is estimated to be open</description>
    <label>Estimated Open Date</label>
    <type>Date</type>
</CustomField>