force-app/main/default/objects/Opportunity/fields/IMDS_Approval__c.field-meta.xml
<CustomField>
    <fullName>IMDS_Approval__c</fullName>
    <description>Data for this field is integrated from Atlas</description>
    <inlineHelpText>Data for this field is integrated from Atlas</inlineHelpText>
    <label>IMDS Approval</label>
    <length>25</length>
    <type>Text</type>
</CustomField>