force-app/main/default/objects/Opportunity/fields/IMDS_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>IMDS_Approval_Date__c</fullName>
    <label>IMDS Approval Date</label>
    <type>Date</type>
</CustomField>