force-app/main/default/objects/Opportunity/fields/IMDS_Notes__c.field-meta.xml
<CustomField>
    <fullName>IMDS_Notes__c</fullName>
    <label>IMDS Notes</label>
    <type>TextArea</type>
</CustomField>