force-app/main/default/objects/Opportunity/fields/MLA__c.field-meta.xml
<CustomField>
    <fullName>MLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLA</label>
    <type>Checkbox</type>
</CustomField>