force-app/main/default/objects/Opportunity/fields/New_Store_Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Store_Opp_Stage__c</fullName>
    <label>New Store Opp Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Promote Site</fullName>
            </value>
            <value>
                <fullName>IMDS &amp; Radius Check</fullName>
            </value>
            <value>
                <fullName>Scorecard</fullName>
            </value>
            <value>
                <fullName>Create Project, NTP, MLA</fullName>
            </value>
            <value>
                <fullName>Account Setup &amp; RA</fullName>
            </value>
            <value>
                <fullName>Store Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>