force-app/main/default/objects/Opportunity/fields/Radius__c.field-meta.xml
<CustomField>
    <fullName>Radius__c</fullName>
    <label>Radius Restriction</label>
    <length>25</length>
    <type>Text</type>
</CustomField>