force-app/main/default/objects/Opportunity/fields/Scorecard_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Assigned_To__c</fullName>
    <label>Scorecard Assigned To</label>
    <length>25</length>
    <type>Text</type>
</CustomField>